# bayesian-pivot-trading-infra-public

./: .env.example  .gitattributes  .gitignore  README.md  agent.md  ai_audit_engine.py  analyze_current_market.py  analyze_results.py  briefing_output.txt  btc_analysis_output.txt  btc_now.txt  btc_output.txt  detect_fvgs.py  fetch_recent_trade.py  live_trades_output.txt  pa_output.txt  pa_output2.txt  pa_output3.txt  pa_output4.txt  pa_output5.txt  phase2_monte_carlo_report.md  recent_output.txt  release_public.py  requirements.txt  scanner_backtest.py  schema_upgrade.sql  test_bot.py
analysis/: performance_audit_runner.py
backtesting/: backtest_utils.py  generate_report_visuals.py  monte_carlo.py  monte_carlo_results.json
cron/: daily_alpha_sync.sh
data/: bot_scans_supabase.json  btc_march_audit.csv
deployment/: modal_app.py  modal_inspect.py  modal_inspect_env.py
docs/: ALL_TIME_PERFORMANCE_REPORT.md  BAYESIAN_PIVOT_ALPHA_SCANNER.md  BAYESIAN_PIVOT_ALPHA_SPECIFICATION.md  BAYESIAN_PIVOT_CASE_STUDY.md  BAYESIAN_PIVOT_MANIFESTO.md  BAYESIAN_PIVOT_TECH_CASE_STUDY.md  MODEL_OVERHEAD.md  PROP_FIRM_SCALING_PLAN.md  README.md  SOVEREIGN_EXECUTION_PLAN.md  scanner_accuracy_report.md  strategy_performance_projection.md
logs/: backtest_temp.txt
quant-auditor/: Cargo.toml
quant-auditor/src/: main.rs
quant-auditor/ui/: appwindow.slint
results/: diff.txt  grounded_mc_report.txt  mc_report.txt  requirements.txt
scratch/: README.md.bak  README.public.md.bak  analyze_bias_history.py  analyze_db.py  analyze_manual_trades.py  analyze_profitable_trades.py  (+59 more)
(+143 files in other folders)
